--- a/.gitignore
+++ b/.gitignore
@@ -39,8 +39,8 @@ build-iPhoneSimulator/
 /rdoc/
 
 ## Environment normalization:
-/.bundle/
-/vendor/bundle
+.bundle/
+vendor/
 /lib/bundler/man/
 
 # for a library or gem, you might want to ignore these files since the code is
